moved blog button

--- a/index.html
+++ b/index.html
@@ -750,9 +750,6 @@
             <button id="theme-toggle" aria-label="Toggle dark/light mode">
                 <i class="fas fa-moon"></i> <!-- Initial icon -->
             </button>
-            <a href="blog/" id="blog-button" class="sidebar-icon-button" aria-label="Go to Blog">
-                <i class="fas fa-blog"></i> <!-- Blog icon -->
-            </a>
         </div>
     </aside>
 
@@ -768,6 +765,7 @@
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="https://github.com/shepfishy" target="_blank" rel="noopener noreferrer" class="btn btn-outline"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="blog/" id="blog-button" class="btn btn-outline" aria-label="Go to Blog"> <i class="fas fa-blog"></i> Read my blog!</a>
                 </div>
             </div>
         </section>
