update good mhm yeah i english yesterday

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             /* Dark mode */
             --bg-dark: #1a1b26; /* Tokyo Night background */
-            --text-dark: #a9b1d6; /* Tokyo Night foreground */
+            --text-dark: #fcdddd; /* Tokyo Night foreground */
             --primary-dark: #bb9af7; /* Tokyo Night purple */
             --secondary-dark: #7aa2f7; /* Tokyo Night blue */
             --accent-dark: #ff7b72; /* Keep accent consistent */
@@ -753,7 +753,7 @@
         </ul>
         <div class="sidebar-social-links">
             <a href="https://github.com/shepfishy" target="_blank" rel="noopener noreferrer" class="sidebar-social-link" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://discord.com/users/shepfish" target="_blank" rel="noopener noreferrer" class="sidebar-social-link" title="Discord (shepfish)"><i class="fab fa-discord"></i></a>
+            <a href="https://discord.gg/SQhrDCGsUR" target="_blank" rel="noopener noreferrer" class="sidebar-social-link" title="Discord Server"><i class="fab fa-discord"></i></a>
             <a href="https://australi.us" target="_blank" rel="noopener noreferrer" class="sidebar-social-link" title="Personal Website (australi.us)"><i class="fas fa-globe"></i></a>
         </div>
     </aside>
@@ -768,13 +768,11 @@
                 <h2><span id="typing-subtitle"></span><span class="typing-cursor"></span></h2>
                 <p>A slightly autistic (chronically online) linux user! <br>Welcome to my Litterbox.</p>
                 <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="https://github.com/shepfishy" target="_blank" rel="noopener noreferrer" class="btn btn-outline"><i class="fab fa-github"></i> GitHub</a>
-                    <a href="blog/" id="blog-button" class="btn btn-outline" aria-label="Go to Blog"> <i class="fas fa-blog"></i> Read my blog!</a>
+                    <a href="blog/" id="blog-button" class="btn btn-outline" aria-label="Go to Blog"> <i class="fas fa-blog"></i> Try reading my blog</a>
+                    <a href="https://discord.gg/SQhrDCGsUR" id="discord-button" class="btn btn-outline" aria-label="Go to Blog"><i class="fa-brands fa-discord"></i> Chat with my Discord</a>
                 </div>
             </div>
         </section>
-        
 
         <!-- About Section -->
         <section id="about">
@@ -785,17 +783,7 @@
                     <img src="assets/sheppy.jpg" alt="A picture of shepfish">
                 </div>
                 <div class="about-text">
-                    <p>I'm a beginner programmer learning new skills. I enjoy tinkering with Linux systems and exploring different technologies.</p>
-                    <p>Currently focusing on improving my skills and learning C++. I have experience with web development fundamentals and enjoy building small projects.</p>
-                    <div class="tech-stack">
-                        <span class="tech-badge">HTML5</span>
-                        <span class="tech-badge">CSS3</span>
-                        <span class="tech-badge">JavaScript</span>
-                        <span class="tech-badge">Python</span>
-                        <span class="tech-badge">C++ (Learning)</span>
-                        <span class="tech-badge">Linux</span>
-                    </div>
-                    <!-- <a href="#" class="btn btn-primary" style="margin-top: 1.5rem;">Resume (Coming Soon)</a> -->
+                    <p>I'm a beginner programmer learning new skills.<br>I enjoy tinkering with Linux systems and exploring different technologies.<br>Currently focusing on improving my skills and learning C++.<br>I have experience with web development fundamentals and enjoy building small projects.</p>
                 </div>
             </div>
         </section>
@@ -909,26 +897,45 @@
                     </div>
                 </div>
 
-                 <!-- Add more projects similarly -->
-                 <!-- Example:
-                 <div class="project-card" data-category="scripting">
+                <!-- Project 4: Mathspace Bot -->
+                <div class="project-card" data-category="scripting">
                     <div class="project-image">
-                        <img src="assets/gooferr.png" alt="Placeholder project image">
+                        <img src="assets/Mathspace Bot.png" alt="Placeholder project image">
                          <div class="project-overlay">
                             <div class="project-links">
-                                <a href="[GITHUB_LINK]" target="_blank" rel="noopener noreferrer" class="project-link" title="View Source Code"><i class="fab fa-github"></i></a>
+                                <a href="https://shepfishy.github.io/mathspaceBot/" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>[Project Name]</h3>
-                        <p>[Brief Description]</p>
+                        <h3>Mathspace Bot</h3>
+                        <p>With this application you can gain mathspace points like it's nothing!</p>
                         <div class="project-tags">
-                            <span>[Tag1]</span><span>[Tag2]</span>
+                            <span>Javascript</span><span>Python</span>
                         </div>
                     </div>
                 </div>
-                -->
+
+                                <!-- Project 4: shepchat on react -->
+                <div class="project-card" data-category="scripting">
+                    <div class="project-image">
+                        <img src="assets/shepchat.png" alt="Placeholder project image">
+                         <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/shepfishy/shepchat" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Source"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/shepfishy/shepchat" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            </div>    
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Shep Chat</h3>
+                        <p>This is my chatting app, database hosted on firebase</p>
+                        <div class="project-tags">
+                            <span>Javascript</span><span>Python</span>
+                        </div>
+                    </div>
+                </div>
+                
 
             </div>
         </section>
@@ -949,7 +956,7 @@
             <p style="text-align: center; font-weight: 600; margin-bottom: 1.5rem; color: var(--secondary);">Connect with me:</p>
             <div class="social-links-footer" style="margin-bottom: 3rem;">
                 <a href="https://github.com/shepfishy" target="_blank" rel="noopener noreferrer" class="social-link-footer" title="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://discord.com/users/shepfish" target="_blank" rel="noopener noreferrer" class="social-link-footer" title="Discord (shepfish)"><i class="fab fa-discord"></i></a>
+                <a href="https://discord.gg/SQhrDCGsUR" target="_blank" rel="noopener noreferrer" class="social-link-footer" title="Discord (shepfish)"><i class="fab fa-discord"></i></a>
                 <a href="https://australi.us" target="_blank" rel="noopener noreferrer" class="social-link-footer" title="Personal Website (australi.us)"><i class="fas fa-globe"></i></a>
             </div>
             <p><br><br><br><br><br><br><br><br><br><br><br></p>
