--- a/index.html
+++ b/index.html
@@ -955,10 +955,10 @@
             <div style="max-width: 650px; margin: 0 auto 3rem auto; text-align: center;">
                 <p style="margin-bottom: 1.5rem; font-size: 1.1rem; opacity: 0.9;">
                     Hai! I am usually available for a conversation,<br> if you're looking for one please contact me on any of the platforms below.
-                    <br> I can collaborate on projects or just chat about computeres lel.
+                    <br> I can collaborate on projects or just chat about computers lel.
                 </p>
                 <p style="font-size: 1rem; opacity: 0.8;">
-                    The best ways to reach me are through Discord or Email. <br> Feel free to connect with me on other platforms as well!
+                    The best ways to reach me are through Discord (shepfish) or Email (shepfish@australi.us). <br> Feel free to connect with me on other platforms as well!
                 </p>
             </div>
 
