--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                     <img src="assets/sheppy.jpg" alt="A picture of shepfish">
                 </div>
                 <div class="about-text">
-                    <p>I'm a beginner programmer learning new skills.<br>I enjoy tinkering with Linux systems and exploring different technologies.<br>Currently focusing on improving my skills and learning C++.<br>I have experience with web development fundamentals and enjoy building small projects.</p>
+                    <p>I'm a beginner programmer learning new skills.<br>I enjoy tinkering with Linux systems and exploring different technologies.<br>Currently focusing on improving my skills and learning new programming languages.<br>I have experience with web development fundamentals and enjoy building small projects.</p>
                 </div>
             </div>
         </section>
