--- a/index.html
+++ b/index.html
@@ -944,6 +944,24 @@
                         </div>
                     </div>
                 </div>
+                                <!-- project 5: shepShare -->
+                <div class="project-card" data-category="scripting">
+                    <div class="project-image">
+                        <img src="assets/shepchat.png" alt="Placeholder project image">
+                         <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://shepshare.australi.us" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            </div>    
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Shep Chat</h3>
+                        <p>This is my chatting app, database hosted on firebase</p>
+                        <div class="project-tags">
+                            <span>Javascript</span><span>Python</span>
+                        </div>
+                    </div>
+                </div>
                 
 
             </div>
