--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                         <img src="assets/Mathspace Bot.png" alt="Placeholder project image">
                          <div class="project-overlay">
                             <div class="project-links">
-                                <a href="https://shepfishy.github.io/mathspaceBot/" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
+                                <a href="https://shepfishy.github.io/Mathspace-Point-Farmer/" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -947,7 +947,7 @@
                                 <!-- project 5: shepShare -->
                 <div class="project-card" data-category="scripting">
                     <div class="project-image">
-                        <img src="assets/shepchat.png" alt="Placeholder project image">
+                        <img src="assets/gooferr.png" alt="Placeholder project image">
                          <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://shepshare.australi.us" target="_blank" rel="noopener noreferrer" class="project-link" title="View Project Website"><i class="fas fa-external-link-alt"></i></a>
@@ -955,8 +955,8 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Shep Chat</h3>
-                        <p>This is my chatting app, database hosted on firebase</p>
+                        <h3>shepShare</h3>
+                        <p>This is my filesharing service/p>
                         <div class="project-tags">
                             <span>Javascript</span><span>Python</span>
                         </div>
